--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,500;0,6..12,600;0,6..12,700;1,6..12,300;1,6..12,400&display=swap');
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,8 +20,14 @@
   }
 }
 
-body {
+/* body {
   font-family: 'Poppins', sans-serif;
+  letter-spacing: 1.25px;
+  font-weight: 200;
+} */
+
+body {
+  font-family: 'Nunito Sans', sans-serif;;
   letter-spacing: 1.25px;
   font-weight: 200;
 }
