--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,27 @@
   letter-spacing: 2px;
   font-weight: 200;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #8f54a0 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 0px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(216,207,196,.5);
+    border-radius: 10px;
+    border: 4px solid #ffffff;
+  }
+
+  
