add styling to privacy and terms

--- a/components/Terms&Privacy/index.css
+++ b/components/Terms&Privacy/index.css
@@ -1,4 +1,6 @@
 .scrollAction {
-    overflow-y: scroll !important;
-    -webkit-overflow-scrolling: touch;
+    overflow: scroll!important;
+  -webkit-scrollbar {
+        width: 2px;
+      }
 }
