--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
-    scrollbar-width: auto;
+    scrollbar-width: 0;
     scrollbar-color: #8f54a0 #ffffff;
   }
 
@@ -36,14 +36,14 @@
     width: 0px;
   }
 
-  *::-webkit-scrollbar-track {
+  /* *::-webkit-scrollbar-track {
     background: #ffffff;
-  }
-
+  } */
+/* 
   *::-webkit-scrollbar-thumb {
     background-color: rgb(216,207,196,.5);
     border-radius: 10px;
     border: 4px solid #ffffff;
-  }
+  } */
 
   
