--- a/app/globals.css
+++ b/app/globals.css
@@ -34,10 +34,10 @@
 
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
-* {
+/* * {
   scrollbar-width: 0;
   scrollbar-color: #8f54a0 #ffffff;
-}
+} */
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
