--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -21,7 +20,7 @@
 }
 
 * {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   letter-spacing: 2px;
   font-weight: 200;
 }
