--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
 
 @tailwind base;
 @tailwind components;
@@ -20,9 +24,9 @@
 }
 
 * {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "cormorant", sans-serif;
   letter-spacing: 2px;
-  font-weight: 200;
+  font-weight: 100;
 }
 
 /* Chrome, Edge, and Safari */
